--- a/my-app/src/app/login/login.component.html
+++ b/my-app/src/app/login/login.component.html
@@ -1,30 +1,30 @@
 <div class="container-fluid main-container" *ngIf="!this._storage.getValue('loggedIn')">
     <form class="form-horizontal">
-    <div class="form-group">
-        <label for="inputEmail3" class="col-sm-2 control-label">Email</label>
-        <div class="col-sm-10">
-        <input [value]="username" (input)="username = $event.target.value" type="email" class="form-control" id="inputEmail3" placeholder="Email">
+        <div class="form-group">
+            <label for="inputEmail3" class="col-sm-2 control-label">Email</label>
+            <div class="col-sm-10">
+                <input [value]="username" (input)="username = $event.target.value" type="email" class="form-control" id="inputEmail3" placeholder="Email">
+            </div>
         </div>
-    </div>
-    <div class="form-group">
-        <label for="inputPassword3" class="col-sm-2 control-label">Password</label>
-        <div class="col-sm-10">
-        <input [value]="password" (input)="password = $event.target.value" type="password" class="form-control" id="inputPassword3" placeholder="Password">
+        <div class="form-group">
+            <label for="inputPassword3" class="col-sm-2 control-label">Password</label>
+            <div class="col-sm-10">
+                <input [value]="password" (input)="password = $event.target.value" type="password" class="form-control" id="inputPassword3" placeholder="Password">
+            </div>
         </div>
-    </div>
-    <div class="form-group">
-        <div class="col-sm-offset-2 col-sm-10">
-        <div class="checkbox">
-            <label>
-            <input type="checkbox" [checked]="rememberMe" (change)="rememberMe = !rememberMe"> Remember me
-            </label>
+        <div class="form-group">
+            <div class="col-sm-offset-2 col-sm-10">
+                <div class="checkbox">
+                    <label><input type="checkbox" [checked]="rememberMe" (change)="rememberMe = !rememberMe"> Remember me</label>
+                </div>
+            </div>
         </div>
-        </div>
-    </div>
+    <!--<button type="submit" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect">Submit</button>-->
     </form>
     <div>
         <div class="col-sm-offset-2 col-sm-10">
             <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect" (click)="loginClicked()">Submit</button>
+            <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect pull-right" (click)="apiLoginClicked()">API TEST</button>
         </div>
     </div>
 </div>
