--- a/my-app/src/app/app.component.html
+++ b/my-app/src/app/app.component.html
@@ -9,7 +9,7 @@
       <div class="mdl-layout__header-row">
         <!-- Title -->
         <span class="mdl-layout-title">
-          <a class="mdl-navigation__link mdl-layout-title" [routerLink]="['/home']">RogueLike</a>
+          <a class="mdl-navigation__link mdl-layout-title" [routerLink]="['/home']">Roguelike</a>
         </span>
         <!-- Add spacer, to align navigation to the right -->
         <div class="mdl-layout-spacer"></div>
