--- a/my-app/src/app/stats/stats.component.css
+++ b/my-app/src/app/stats/stats.component.css
@@ -7,6 +7,11 @@
     border: 2px solid black;
 }
 
+.detail-panel{
+    padding: 0;
+    margin: 0;
+}
+
 .list-group{
     height: 100%;
     max-width: 25vw;
