Can create new character, stats/profile/homepage now work fully with backend
the new character is stored in session storage with key: "newCharacter" it stores their name

--- a/my-app/src/app/home/home.component.html
+++ b/my-app/src/app/home/home.component.html
@@ -17,7 +17,7 @@
                 <tbody>
                     <ng-container *ngFor="let character of character_history | async | sortingCharacter: 'score'; index as i">
                         <tr *ngIf="i >= this.numPerPage * this.topPlayerPage && i <= (this.numPerPage * this.topPlayerPage) + this.numPerPage - 1">
-                            <td class="col-xs-2">{{i+1}}</td><td class="col-xs-8">{{character.user_id}}</td><td class="col-xs-2 text-center">{{character.score}}</td>
+                            <td class="col-xs-2">{{i+1}}</td><td class="col-xs-8">{{character.character.name}}</td><td class="col-xs-2 text-center">{{character.score}}</td>
                         </tr>
                     </ng-container>
                 </tbody>
@@ -59,7 +59,7 @@
                 <tbody> 
                     <ng-container *ngFor="let character of character_history | async | sortingCharacter: 'level_id'; index as i">
                         <tr *ngIf="i >= this.numPerPage * this.topLevelPage && i <= (this.numPerPage * this.topLevelPage) + this.numPerPage - 1">
-                            <td class="col-xs-2">{{i+1}}</td><td class="col-xs-8">{{character.character_id}}</td><td class="col-xs-2 text-center">{{character.level_id}}</td>
+                            <td class="col-xs-2">{{i+1}}</td><td class="col-xs-8">{{character.character.name}}</td><td class="col-xs-2 text-center">{{character.level_id}}</td>
                         </tr>
                     </ng-container>
                 </tbody>
