Fixed error when viewing weapons of a current character

--- a/my-app/src/app/stats/stats.component.html
+++ b/my-app/src/app/stats/stats.component.html
@@ -64,7 +64,7 @@
           <li class="list-group-item">Health: {{this.selectedCharacter.character.health}}</li>
           <li *ngIf="this.selectedWeapon" class="list-group-item" >Weapon: {{this.selectedWeapon.name}}</li>
           <li *ngIf="this.selectedArmor" class="list-group-item">Armor: {{this.selectedArmor.name}}</li>          
-          <li class="list-group-item">Level: {{this.getLevel(this.selectedCharacter.id).id}}</li>
+          <li class="list-group-item">Level: {{this.getLevel(this.selectedCharacter.character.id).id}}</li>
           <li class="list-group-item" *ngIf="this.selectedCharacter.character.killed_by">Killed By: {{getKilledByClass(this.selectedCharacter.character.killed_by).name}}</li>
           <button type="button" class="btn btn-success center-block" (click)="continuePlaying()" *ngIf="!this.selectedCharacter.character.killed_by">Continue Playing</button>                          
         </div>
